2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03717] print newline before exec shell command.
	* main.c (execsh): print newline

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03715] initial currentLine when pager mode.
	* file.c (getNextPage): fix cur

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03714] -cols 1 -dump -o fold_line=1
	* file.c (addnewline): check i == 0, i == l->len
	* fm.h (_INIT_BUFFER_WIDTH): added
		(INIT_BUFFER_WIDTH): use _INIT_BUFFER_WIDTH

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03713] search with "$"
	* search.c (forwardSearch): check l->next && l->next->bpos
		(backwardSearch): check l->size, l->next && l->next->bpos

2003-01-31  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03712] buf fix of LINE_INFO
	* main.c (curlno): rewrite

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03709] Re: view source, edit source
	* display.c (displayBuffer): INIT_BUFFER_WIDTH
	* file.c (_saveBuffer): added
		(saveBuffer): use _saveBuffer
		(saveBufferBody): added
	* main.c (vmSrc): saveBufferBody
	* proto.h (saveBufferBody): added

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev-en 00852] Re: Enhancement: content type detection of files
	* url.c (DefaultGuess): remove upppercases
		(guessContentTypeFromTable): rewrite, strcasecmp

2003-01-30  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03708] Re: Don't stop loading image when moving to next page.
	* config.h.dist (lstat): define ifndef HAVE_LSTAT
	* configure (config.h) ditto
	* display.c (fmTerm): new loadImage
		(save_current_buf): only ifdef USE_BUFINFO
		(displayBuffer): new loadImage
	* etc.c (setup_child): TrapSignal
	* file.c (loadGeneralFile): TRAP_OFF, TRAP_ON
		(loadHTMLstream): ditto
		(loadGopherDir): ditto
		(loadBuffer): ditto
		(loadImageBuffer): ditto
		(getNextPage): ditto
		(save2tmp): ditto
	* fm.h (TrapSignal): added