@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.86 2003/01/29 17:38:15 ukai Exp $ */
+/* $Id: proto.h,v 1.87 2003/01/30 16:39:40 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -302,6 +302,7 @@ extern void cursorXY(Buffer *buf, int x, int y);
 extern void restorePosition(Buffer *buf, Buffer *orig);
 extern int columnSkip(Buffer *buf, int offset);
 extern int columnPos(Line *line, int column);
+extern int columnLen(Line *line, int column);
 extern Line *lineSkip(Buffer *buf, Line *line, int offset, int last);
 extern Line *currentLineSkip(Buffer *buf, Line *line, int offset, int last);
 extern int gethtmlcmd(char **s);
